--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NaderSGHIR/MongoDates.git"
+    "url": "git+https://github.com/nadersgh/MongoDates.git"
   },
   "keywords": [
     "json",
@@ -26,7 +26,7 @@
   "author": "Nader Sghir",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NaderSGHIR/MongoDates/issues"
+    "url": "https://github.com/nadersgh/MongoDates/issues"
   },
-  "homepage": "https://github.com/NaderSGHIR/MongoDates#readme"
+  "homepage": "https://github.com/nadersgh/MongoDates#readme"
 }
